--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -30,7 +30,7 @@ jobs:
           serverUrl: ${{ secrets.SERVERURL }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          manifestPath: '/deployit-manifest.xml'
+          manifestPath: ${{ secrets.MANIFEST }}
           action: 'create_publish_deploy'
           outputPath: '/outputdar'
           versionNumber: ${{ vars.VERSIONNUMBER }}
