--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
 MANIFEST_PATH=manifest/01-build-publish-deploy.xml
-ACTION=create_publish_deploy
+ACTION=deploy
 OUTPUT_PATH=outputdar
 VERSION_NUMBER=1.0
 PACKAGE_NAME=appForAction-1.0.dar
-ENVIRONMENT_ID=Environments/envForAction1
+ENVIRONMENT_ID=Environments/prod
 ROLLBACK=true
