--- a/.env.prod
+++ b/.env.prod
@@ -5,3 +5,4 @@ VERSION_NUMBER=1.0
 PACKAGE_NAME=appForAction-1.0.dar
 ENVIRONMENT_ID=Environments/prod
 ROLLBACK=true
+DEPLOYPACKAGEID=Applications/appForAction/1.0
