--- a/.github/workflows/03-all-single-step-env-file.yml
+++ b/.github/workflows/03-all-single-step-env-file.yml
@@ -1,6 +1,16 @@
 name: 03 All single step - env file
 
-on: [workflow_dispatch]
+on:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Target environment'
+        required: true
+        default: 'dev'
+      version:
+        description: 'Version number'
+        required: true
+        default: '1.0.0'
 
 jobs:
   build:
