--- a/.github/workflows/03-all-single-step-env-file.yml
+++ b/.github/workflows/03-all-single-step-env-file.yml
@@ -77,6 +77,11 @@ jobs:
               echo "$line" >> $GITHUB_ENV
             fi
           done < "$ENV_FILE"
+          
+          echo "Selected Environment: ${{ github.event.inputs.environment }}"
+          echo "Selected Action: ${{ github.event.inputs.action_type }}"
+          echo "Selected Version: ${{ github.event.inputs.version }}"
+          echo "Selected Manifest File: ${{ github.event.inputs.manifest_file }}"
 
       - name: Create, Publish, and Deploy Package
         if: github.ref_name == 'dev'
